deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    nodeapp1: ""
  name: nodeapp1
  namespace: default
spec:
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      nodeapp1: ""
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        nodeapp1: ""
    spec:
      containers:
      - image: gcr.io/firm-star-336501/nodeapp@sha256:2dffc59935110d1c4871fc68debe23c208ab1f897f39cbf190e5e2fe626e7e88
        imagePullPolicy: IfNotPresent
        name: nodeapp
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
