ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress3
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: "v1.example.com"
    http:
      paths:
      - path: /v1
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-deployment-service
            port:
              number: 3000
  - host: "v2.example.com"
    http:
      paths:
      - path: /v2
        pathType: ImplementationSpecific
        backend:
          service:
            name: nodeapp2
            port:
              number: 3000
